--- a/home-one.html
+++ b/home-one.html
@@ -5,8 +5,8 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Maha Personal cv/resume template for professional and personal website." />
-        <meta name="keywords" content="creative, cv, designer,  online cv, online resume, powerful portfolio, professional, professional resume, responsive, resume, vcard " />
+        <meta name="description" content="Ramzes Personal Resume" />
+        <meta name="keywords" content="ramzes,engineer" />
         <meta name="developer" content="Ramzes">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
