--- a/home-one.html
+++ b/home-one.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Ramzes Personal Resume" />
         <meta name="keywords" content="ramzes,engineer" />
-        <meta name="developer" content="Ramzes">
+        <meta name="developer" content="Software Engineer / Lecturer">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- FAV AND ICONS   -->
