--- a/home-one.html
+++ b/home-one.html
@@ -15,7 +15,8 @@
         <link rel="shortcut icon" href="assets/images/apple-icon.png">
         <link rel="shortcut icon" sizes="72x72" href="assets/images/apple-icon-72x72.png">
         <link rel="shortcut icon" sizes="114x114" href="assets/images/apple-icon-114x114.png">
-        
+        <meta property="og:image" content="assets/cover.png"/>
+
         <!-- Google Font-->
         <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <!-- Font Awesome -->
