--- a/home-one.html
+++ b/home-one.html
@@ -5,7 +5,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Ramzes Personal Resume" />
+        <meta name="description" content="PHP,Node JS,React JS,React Native,Lecturer" />
         <meta name="keywords" content="ramzes,engineer" />
         <meta name="developer" content="Software Engineer / Lecturer">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
